Add TRY-O gallery visuals across pages

--- a/index.html
+++ b/index.html
@@ -118,6 +118,29 @@
       </div>
     </section>
 
+    <section class="visual-gallery">
+      <div class="container">
+        <div class="section-heading">
+          <h2>Hybrid charging visuals straight from the TRY-O lab</h2>
+          <p>Explore the product story through detailed imagery featuring the actual benefits and callouts found on our hero solar power bank.</p>
+        </div>
+        <div class="image-gallery">
+          <figure class="image-card">
+            <img src="assets/gallery/solar-usb.svg" alt="Infografía TRY-O Solar Charge y USB Charge con tiempos de 6-8 horas y carga dependiente del clima" />
+            <figcaption>Combina carga solar por días con recarga USB de 6-8 horas gracias al adaptador de 5 V / 3,1 A.</figcaption>
+          </figure>
+          <figure class="image-card">
+            <img src="assets/gallery/double-led.svg" alt="Gráfico Double LED Lighting con modos Steady, SOS y Strobe para mantener tu batería segura" />
+            <figcaption>Luz LED doble integrada con modos Steady, SOS y Strobe para acompañarte en cada aventura urbana.</figcaption>
+          </figure>
+          <figure class="image-card">
+            <img src="assets/gallery/waterproof.svg" alt="Poster TRY-O destacando protección Waterproof, Dustproof y Shockproof" />
+            <figcaption>Carcasa resistente: impermeable, a prueba de polvo y de golpes con protección 360°.</figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+
     <section id="testimonials">
       <div class="container">
         <div class="section-heading">
