--- a/product.html
+++ b/product.html
@@ -119,6 +119,29 @@
       </div>
     </section>
 
+    <section class="visual-gallery">
+      <div class="container">
+        <div class="section-heading">
+          <h2>Visual specs for the Pulse 20K Urban Bank</h2>
+          <p>These official TRY-O gráficos resumen la seguridad, el rendimiento outdoor y las dimensiones clave del cargador.</p>
+        </div>
+        <div class="image-gallery">
+          <figure class="image-card">
+            <img src="assets/gallery/safety-guarantee.svg" alt="Infografía Garantía de seguridad multiprotección mantenga su batería segura" />
+            <figcaption>Sistema multiprotección: contra sobrecargas, descargas, cortocircuitos y temperaturas extremas.</figcaption>
+          </figure>
+          <figure class="image-card">
+            <img src="assets/gallery/outdoor-power.svg" alt="Poster 10000 mAh outdoor power bank con linternas LED dual y carga solar" />
+            <figcaption>Diseño outdoor: linternas LED duales, anillo colgante y carga rápida de 15W para expediciones.</figcaption>
+          </figure>
+          <figure class="image-card">
+            <img src="assets/gallery/dimensions.svg" alt="Diagrama 10000 mAh con medidas 4.26in y 2.8in, doble linterna y panel solar" />
+            <figcaption>Esquema dimensional con indicadores de puerto, panel solar y doble linterna LED integrada.</figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+
     <section class="alt">
       <div class="container">
         <div class="section-heading">
