--- a/products.html
+++ b/products.html
@@ -109,6 +109,29 @@
       </div>
     </section>
 
+    <section class="visual-gallery">
+      <div class="container">
+        <div class="section-heading">
+          <h2>Product gallery with real TRY-O callouts</h2>
+          <p>Revisa las ventajas impresas en nuestros materiales oficiales para conocer cada detalle antes de comprar.</p>
+        </div>
+        <div class="image-gallery">
+          <figure class="image-card">
+            <img src="assets/gallery/solar-bank.svg" alt="Infografía Solar Charge Bank huge capacity high speed" />
+            <figcaption>Solar Charge Bank: gran capacidad con panel monocristalino y carga inteligente PD de 20W.</figcaption>
+          </figure>
+          <figure class="image-card">
+            <img src="assets/gallery/10000mah-multi.svg" alt="Gráfico 10000mAh cargador solar puede cargar 3 dispositivos al mismo tiempo" />
+            <figcaption>10000mAh solar: alimenta tres dispositivos simultáneamente con dos puertos USB-A y uno Type-C.</figcaption>
+          </figure>
+          <figure class="image-card">
+            <img src="assets/gallery/10000mah-emergency.svg" alt="Poster 10000mAh carga solar de emergencia con hebilla de escalada y flashlight" />
+            <figcaption>Kit de emergencia: incluye hebilla de escalada, linternas dobles y salidas Type-C + USB.</figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+
     <section>
       <div class="container">
         <div class="section-heading">
